# langchain-edu

./: README.md  시험문제.md
agent/: checkpoints.db-shm  env.sample  pyproject.toml
agent/.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
agent/app/agents/: deep_agent.py  price_agent.py  prompts.py  search_agent.py
agent/app/agents/tools/: __init__.py  _es_common.py  compare_prices.py  search_nutrition.py  (+2 more)
agent/app/core/: config.py
agent/app/services/: agent_service.py
agent/app/utils/: opensearch_client.py
agent/docs/: week2-deepeval.md  week2-llm-as-a-judge.md  week2-performance-report-guide.md  week2-performance-report.md  week3-improvements.md  week4-deep-agent.md
agent/pipeline/: .env.example  .gitignore  AGENTS.md  chunker.py  config.py  download_ingredients.py  download_nutrition.py  download_recipes.py  embedder.py  es_client.py  hwp_loader.py  index_mapping.py  index_nutrition.py  json_loader.py  main.py  pdf_loader.py  pyproject.toml  search.py  study.md  주의사항.md
agent/pipeline/tests/: test_json_loader.py
agent/scripts/: collect_prices.py
agent/tests/: generate_report.py  test_agent_service.py  test_deep_agent.py  test_deepeval.py  test_opensearch_client.py  test_opik_eval.py  test_search_agent.py
docs/: presentation.md  troubleshooting-stories.md
docs/superpowers/plans/: 2026-03-13-code-review-fixes.md  2026-04-05-deep-agent.md  2026-04-05-price-rag-pipeline.md
docs/superpowers/specs/: 2026-03-11-price-agent-design.md  2026-04-05-final-presentation-readme-design.md  2026-04-05-price-rag-pipeline-design.md
