[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cohere>=5.20.7",
    "elasticsearch>=9.3.0",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.1",
    "lxml>=6.0.2",
    "openai>=2.29.0",
    "pyhwp>=0.1b15",
    "pypdf>=6.9.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "langchain-core>=1.2.26",
    "pytest>=9.0.2",
]
